SERVER-86007 Allow collectionless getMore command to be profiled (#30771)

GitOrigin-RevId: 59797f5f1a2bd31b582a5be371ebebe82335a719